--- a/overlay/Overlay.qsf
+++ b/overlay/Overlay.qsf
@@ -89,3 +89,9 @@ set_global_assignment -name VHDL_FILE LogicCell.vhd
 set_global_assignment -name VHDL_FILE Overlay.vhd
 set_global_assignment -name SDC_FILE Overlay.sdc
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "NO HEAT SINK WITH STILL AIR"
+set_global_assignment -name AUTO_RESTART_CONFIGURATION OFF
+set_global_assignment -name ENABLE_OCT_DONE OFF
+set_global_assignment -name ENABLE_CONFIGURATION_PINS OFF
+set_global_assignment -name ENABLE_BOOT_SEL_PIN OFF
+set_global_assignment -name USE_CONFIGURATION_DEVICE ON
+set_global_assignment -name RESERVE_ALL_UNUSED_PINS "AS INPUT TRI-STATED"
