--- a/.github/workflows/build_docs.yml
+++ b/.github/workflows/build_docs.yml
@@ -12,7 +12,7 @@ jobs:
       - name: compile LaTeX document
         uses: xu-cheng/latex-action@v3
         with:
-          working_directory: documentation
+          working_directory: docs
           root_file: main.tex
           texlive_version: 2023
 
