--- a/overlay/Overlay.qsf
+++ b/overlay/Overlay.qsf
@@ -85,9 +85,6 @@ set_location_assignment PIN_91 -to Switch[3]
 set_location_assignment PIN_92 -to Switch[2]
 set_location_assignment PIN_95 -to Switch[1]
 set_location_assignment PIN_96 -to Switch[0]
-set_global_assignment -name VHDL_FILE LogicCell.vhd
-set_global_assignment -name VHDL_FILE Overlay.vhd
-set_global_assignment -name SDC_FILE Overlay.sdc
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "NO HEAT SINK WITH STILL AIR"
 set_global_assignment -name AUTO_RESTART_CONFIGURATION OFF
 set_global_assignment -name ENABLE_OCT_DONE OFF
@@ -96,3 +93,7 @@ set_global_assignment -name ENABLE_BOOT_SEL_PIN OFF
 set_global_assignment -name USE_CONFIGURATION_DEVICE ON
 set_global_assignment -name RESERVE_ALL_UNUSED_PINS "AS INPUT TRI-STATED"
 set_global_assignment -name RESERVE_ALL_UNUSED_PINS_NO_OUTPUT_GND "AS INPUT TRI-STATED"
+set_global_assignment -name VHDL_FILE LC/LogicCell.vhd
+set_global_assignment -name VHDL_FILE Overlay.vhd
+set_global_assignment -name SDC_FILE Overlay.sdc
+set_global_assignment -name VHDL_FILE LC/SerialLC.vhd
