--- a/template/vhdl/template.qsf
+++ b/template/vhdl/template.qsf
@@ -59,66 +59,48 @@ set_global_assignment -name VHDL_FILE template.vhd
 set_global_assignment -name ENABLE_OCT_DONE OFF
 set_global_assignment -name USE_CONFIGURATION_DEVICE ON
 set_global_assignment -name RESERVE_ALL_UNUSED_PINS "AS INPUT TRI-STATED"
-set_location_assignment PIN_12 -to Clock50
-set_location_assignment PIN_14 -to Clock14
-set_location_assignment PIN_97 -to Buttons[0]
-set_location_assignment PIN_98 -to Buttons[1]
-set_location_assignment PIN_99 -to Buttons[2]
-set_location_assignment PIN_100 -to Buttons[3]
-set_location_assignment PIN_52 -to LED_Green[7]
-set_location_assignment PIN_53 -to LED_Green[6]
-set_location_assignment PIN_54 -to LED_Green[5]
-set_location_assignment PIN_55 -to LED_Green[4]
-set_location_assignment PIN_56 -to LED_Green[3]
-set_location_assignment PIN_57 -to LED_Green[2]
-set_location_assignment PIN_58 -to LED_Green[1]
-set_location_assignment PIN_61 -to LED_Green[0]
-set_location_assignment PIN_47 -to LED_Red[7]
-set_location_assignment PIN_48 -to LED_Red[6]
-set_location_assignment PIN_49 -to LED_Red[5]
-set_location_assignment PIN_50 -to LED_Red[4]
-set_location_assignment PIN_51 -to LED_Red[3]
-set_location_assignment PIN_84 -to LED_Red[2]
-set_location_assignment PIN_85 -to LED_Red[1]
-set_location_assignment PIN_86 -to LED_Red[0]
-set_location_assignment PIN_96 -to Switches[7]
-set_location_assignment PIN_95 -to Switches[6]
-set_location_assignment PIN_92 -to Switches[5]
+set_location_assignment PIN_86 -to LED_Green[7]
+set_location_assignment PIN_88 -to LED_Green[6]
+set_location_assignment PIN_90 -to LED_Green[5]
+set_location_assignment PIN_92 -to LED_Green[4]
+set_location_assignment PIN_96 -to LED_Green[3]
+set_location_assignment PIN_98 -to LED_Green[2]
+set_location_assignment PIN_100 -to LED_Green[1]
+set_location_assignment PIN_2 -to LED_Green[0]
+set_location_assignment PIN_5 -to LED_Red[7]
+set_location_assignment PIN_6 -to LED_Red[6]
+set_location_assignment PIN_7 -to LED_Red[5]
+set_location_assignment PIN_8 -to LED_Red[4]
+set_location_assignment PIN_15 -to LED_Red[3]
+set_location_assignment PIN_16 -to LED_Red[2]
+set_location_assignment PIN_17 -to LED_Red[1]
+set_location_assignment PIN_18 -to LED_Red[0]
+set_location_assignment PIN_85 -to Switches[7]
+set_location_assignment PIN_87 -to Switches[6]
+set_location_assignment PIN_89 -to Switches[5]
 set_location_assignment PIN_91 -to Switches[4]
-set_location_assignment PIN_90 -to Switches[3]
-set_location_assignment PIN_89 -to Switches[2]
-set_location_assignment PIN_88 -to Switches[1]
-set_location_assignment PIN_87 -to Switches[0]
-set_location_assignment PIN_43 -to Segment1[7]
-set_location_assignment PIN_44 -to Segment1[6]
-set_location_assignment PIN_39 -to Segment1[5]
-set_location_assignment PIN_38 -to Segment1[4]
-set_location_assignment PIN_37 -to Segment1[3]
-set_location_assignment PIN_42 -to Segment1[2]
-set_location_assignment PIN_41 -to Segment1[1]
-set_location_assignment PIN_40 -to Segment1[0]
-set_location_assignment PIN_35 -to Segment2[7]
-set_location_assignment PIN_36 -to Segment2[6]
-set_location_assignment PIN_29 -to Segment2[5]
-set_location_assignment PIN_28 -to Segment2[4]
-set_location_assignment PIN_27 -to Segment2[3]
-set_location_assignment PIN_34 -to Segment2[2]
-set_location_assignment PIN_33 -to Segment2[1]
-set_location_assignment PIN_30 -to Segment2[0]
-set_location_assignment PIN_21 -to Segment3[7]
-set_location_assignment PIN_26 -to Segment3[6]
-set_location_assignment PIN_17 -to Segment3[5]
-set_location_assignment PIN_16 -to Segment3[4]
-set_location_assignment PIN_15 -to Segment3[3]
-set_location_assignment PIN_20 -to Segment3[2]
-set_location_assignment PIN_19 -to Segment3[1]
-set_location_assignment PIN_18 -to Segment3[0]
-set_location_assignment PIN_7 -to Segment4[7]
-set_location_assignment PIN_8 -to Segment4[6]
-set_location_assignment PIN_3 -to Segment4[5]
-set_location_assignment PIN_2 -to Segment4[4]
-set_location_assignment PIN_1 -to Segment4[3]
-set_location_assignment PIN_6 -to Segment4[2]
-set_location_assignment PIN_5 -to Segment4[1]
-set_location_assignment PIN_4 -to Segment4[0]
-set_global_assignment -name RESERVE_ALL_UNUSED_PINS_NO_OUTPUT_GND "AS INPUT TRI-STATED"
+set_location_assignment PIN_95 -to Switches[3]
+set_location_assignment PIN_97 -to Switches[2]
+set_location_assignment PIN_99 -to Switches[1]
+set_location_assignment PIN_1 -to Switches[0]
+set_location_assignment PIN_20 -to Buttons[0]
+set_location_assignment PIN_19 -to Buttons[1]
+set_location_assignment PIN_4 -to Buttons[2]
+set_location_assignment PIN_3 -to Buttons[3]
+set_global_assignment -name STRATIX_DEVICE_IO_STANDARD "3.3-V LVCMOS"
+set_instance_assignment -name IO_STANDARD "3.3V SCHMITT TRIGGER INPUT" -to Switches[7]
+set_instance_assignment -name IO_STANDARD "3.3V SCHMITT TRIGGER INPUT" -to Switches[6]
+set_instance_assignment -name IO_STANDARD "3.3V SCHMITT TRIGGER INPUT" -to Switches[5]
+set_instance_assignment -name IO_STANDARD "3.3V SCHMITT TRIGGER INPUT" -to Switches[4]
+set_instance_assignment -name IO_STANDARD "3.3V SCHMITT TRIGGER INPUT" -to Switches[3]
+set_instance_assignment -name IO_STANDARD "3.3V SCHMITT TRIGGER INPUT" -to Switches[2]
+set_instance_assignment -name IO_STANDARD "3.3V SCHMITT TRIGGER INPUT" -to Switches[1]
+set_instance_assignment -name IO_STANDARD "3.3V SCHMITT TRIGGER INPUT" -to Switches[0]
+set_instance_assignment -name IO_STANDARD "3.3V SCHMITT TRIGGER INPUT" -to Switches
+set_instance_assignment -name IO_STANDARD "3.3V SCHMITT TRIGGER INPUT" -to Buttons[3]
+set_instance_assignment -name IO_STANDARD "3.3V SCHMITT TRIGGER INPUT" -to Buttons[2]
+set_instance_assignment -name IO_STANDARD "3.3V SCHMITT TRIGGER INPUT" -to Buttons[1]
+set_instance_assignment -name IO_STANDARD "3.3V SCHMITT TRIGGER INPUT" -to Buttons[0]
+set_instance_assignment -name IO_STANDARD "3.3V SCHMITT TRIGGER INPUT" -to Buttons
+set_location_assignment PIN_14 -to Clock14
+set_location_assignment PIN_12 -to Clock50
