--- a/template/schematic/template.qsf
+++ b/template/schematic/template.qsf
@@ -58,22 +58,22 @@ set_global_assignment -name EDA_GENERATE_FUNCTIONAL_NETLIST OFF -section_id eda_
 set_global_assignment -name ENABLE_OCT_DONE OFF
 set_global_assignment -name USE_CONFIGURATION_DEVICE ON
 set_global_assignment -name RESERVE_ALL_UNUSED_PINS "AS INPUT TRI-STATED"
-set_location_assignment PIN_2 -to LED_Green[7]
-set_location_assignment PIN_100 -to LED_Green[6]
-set_location_assignment PIN_98 -to LED_Green[5]
-set_location_assignment PIN_96 -to LED_Green[4]
-set_location_assignment PIN_92 -to LED_Green[3]
-set_location_assignment PIN_90 -to LED_Green[2]
-set_location_assignment PIN_88 -to LED_Green[1]
-set_location_assignment PIN_86 -to LED_Green[0]
-set_location_assignment PIN_5 -to LED_Red[7]
-set_location_assignment PIN_6 -to LED_Red[6]
-set_location_assignment PIN_7 -to LED_Red[5]
-set_location_assignment PIN_8 -to LED_Red[4]
-set_location_assignment PIN_15 -to LED_Red[3]
-set_location_assignment PIN_16 -to LED_Red[2]
-set_location_assignment PIN_17 -to LED_Red[1]
-set_location_assignment PIN_18 -to LED_Red[0]
+set_location_assignment PIN_2 -to LED_A[7]
+set_location_assignment PIN_100 -to LED_A[6]
+set_location_assignment PIN_98 -to LED_A[5]
+set_location_assignment PIN_96 -to LED_A[4]
+set_location_assignment PIN_92 -to LED_A[3]
+set_location_assignment PIN_90 -to LED_A[2]
+set_location_assignment PIN_88 -to LED_A[1]
+set_location_assignment PIN_86 -to LED_A[0]
+set_location_assignment PIN_5 -to LED_B[7]
+set_location_assignment PIN_6 -to LED_B[6]
+set_location_assignment PIN_7 -to LED_B[5]
+set_location_assignment PIN_8 -to LED_B[4]
+set_location_assignment PIN_15 -to LED_B[3]
+set_location_assignment PIN_16 -to LED_B[2]
+set_location_assignment PIN_17 -to LED_B[1]
+set_location_assignment PIN_18 -to LED_B[0]
 set_location_assignment PIN_1 -to Switches[7]
 set_location_assignment PIN_99 -to Switches[6]
 set_location_assignment PIN_97 -to Switches[5]
@@ -105,3 +105,36 @@ set_location_assignment PIN_14 -to Clock14
 set_location_assignment PIN_12 -to Clock50
 set_global_assignment -name RESERVE_ALL_UNUSED_PINS_NO_OUTPUT_GND "AS INPUT TRI-STATED"
 set_global_assignment -name BDF_FILE template.bdf
+
+set_location_assignment PIN_53 -to Segment1[7]
+set_location_assignment PIN_61 -to Segment1[6]
+set_location_assignment PIN_57 -to Segment1[5]
+set_location_assignment PIN_62 -to Segment1[4]
+set_location_assignment PIN_58 -to Segment1[3]
+set_location_assignment PIN_55 -to Segment1[2]
+set_location_assignment PIN_54 -to Segment1[1]
+set_location_assignment PIN_56 -to Segment1[0]
+set_location_assignment PIN_43 -to Segment2[7]
+set_location_assignment PIN_51 -to Segment2[6]
+set_location_assignment PIN_49 -to Segment2[5]
+set_location_assignment PIN_52 -to Segment2[4]
+set_location_assignment PIN_50 -to Segment2[3]
+set_location_assignment PIN_47 -to Segment2[2]
+set_location_assignment PIN_44 -to Segment2[1]
+set_location_assignment PIN_48 -to Segment2[0]
+set_location_assignment PIN_35 -to Segment3[7]
+set_location_assignment PIN_41 -to Segment3[6]
+set_location_assignment PIN_39 -to Segment3[5]
+set_location_assignment PIN_42 -to Segment3[4]
+set_location_assignment PIN_40 -to Segment3[3]
+set_location_assignment PIN_37 -to Segment3[2]
+set_location_assignment PIN_36 -to Segment3[1]
+set_location_assignment PIN_38 -to Segment3[0]
+set_location_assignment PIN_21 -to Segment4[7]
+set_location_assignment PIN_33 -to Segment4[6]
+set_location_assignment PIN_29 -to Segment4[5]
+set_location_assignment PIN_34 -to Segment4[4]
+set_location_assignment PIN_30 -to Segment4[3]
+set_location_assignment PIN_27 -to Segment4[2]
+set_location_assignment PIN_26 -to Segment4[1]
+set_location_assignment PIN_28 -to Segment4[0]
