--- a/lab course/template/template.qsf
+++ b/lab course/template/template.qsf
@@ -105,5 +105,10 @@ set_location_assignment PIN_14 -to Clock14
 set_location_assignment PIN_12 -to Clock50
 set_global_assignment -name RESERVE_ALL_UNUSED_PINS_NO_OUTPUT_GND "AS INPUT TRI-STATED"
 set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "NO HEAT SINK WITH STILL AIR"
+
 set_global_assignment -name BDF_FILE template.bdf
 set_global_assignment -name BDF_FILE ClockDivider.bdf
+set_global_assignment -name BDF_FILE symbols/JK_FF.bdf
+set_global_assignment -name BDF_FILE symbols/1MUX.bdf
+set_global_assignment -name BDF_FILE symbols/2MUX.bdf
+set_global_assignment -name BDF_FILE symbols/4SR.bdf
